# cyfra-auth-server

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  docker-compose.yaml
server/: Cargo.toml
server/src/: main.rs  mr_pusher
shared/: Cargo.toml
shared/src/: encryption.rs  lib.rs  messages.rs  shellio.rs  storage.rs  users.rs  utils.rs
shared/tests/: crypto_test_vectors.rs
