[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
crossterm = "0.28.1"
rand = { version = "0.8.5", features=["std"] }
ring = "0.17.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.135"
sled = "0.34.7"
term_size = "0.3.2"
tokio = { version = "1.43.0", features = [ "full" ]}
x25519-dalek = { version= "2.0.1", features=["static_secrets"] }

[dev-dependencies]
hex = "0.4"

[lib]
doctest = false
